# tiralabra_procgen

./: .coveragerc  .pylintrc  README.md  main_gui.py  pyproject.toml
.github/workflows/: main.yml  python-app.yml
assets/: corridor_wall.png~  load_img.png~  room_floor.png~  room_wall.png~
documentation/: implementation_document.md  specification_document.md  testing_document.md  user_guide.md  week1_report.md  week2_report.md  week3_report.md  week4_report.md  week5_report.md  week6_report.md
dungeon_generator/: grid.py  map_generator.py  map_generator_visualizer.py  room_placer.py  undirected_graphing.py
engine/: engine.py  event_handler.py  ui_handler.py
engine/input_handler/: input_handler.py
engine/objects/: camera_object.py  generator_object.py  object.py  object_handler.py  scene.py  tilemap_object.py
engine/renderer/: color_prefabs.py  colors.py  renderable.py  renderable_circle.py  renderable_debug_grid.py  renderable_line.py  renderable_rect.py  renderable_tilemap.py  renderable_types.py  renderer.py  rendering_camera.py
engine/resource_loader/: resource_loader.py  sprite_loader.py
room_generator/: bowyer_watson.py  engine_generator.py  generator_thread.py  geometry.py  grid.py  map.py  map_generator.py  map_generator_visualizer.py  prim_mst.py  random_point_distributor.py  room.py  room_connector.py  room_placer.py  undirected_graphing.py
room_generator/bowyer_watson/: bowyer_watson.py
test/room_generator/: test_bowyer_watson.py  test_geometry.py  test_prim_mst.py
tests/dungeon_generator/: test_bowyer_watson.py  test_geometry.py  (+2 more)
(+8 files in other folders)
