[tool.poetry]
name = "tiralabra-procgen"
version = "0.1.0"
description = ""
authors = ["BlueShiftButterfly <34643088+BlueShiftButterfly@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"
pygame-gui = "^0.6.9"
pylint = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
